--- a/DotNetSummitWebApi/DotNetSummitWebApi.csproj
+++ b/DotNetSummitWebApi/DotNetSummitWebApi.csproj
@@ -12,10 +12,15 @@
 	<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+	<PackageReference Include="AngleSharp" Version="0.9.9" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
