icons & splash screens added;

--- a/iOS/DotNetSummitMobileApp.iOS.csproj
+++ b/iOS/DotNetSummitMobileApp.iOS.csproj
@@ -109,6 +109,8 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Contents.json" />
     <ImageAsset Include="Assets.xcassets\LaunchImage.launchimage\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-60%402x.png" />
+    <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-60%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -128,6 +130,10 @@
   <ItemGroup>
     <BundleResource Include="Resources\conference.png" />
     <BundleResource Include="Resources\presentation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ITunesArtwork Include="iTunesArtwork" />
+    <ITunesArtwork Include="iTunesArtwork%402x" />
   </ItemGroup>
   <Import Project="..\DotNetSummitMobileApp\DotNetSummitMobileApp.projitems" Label="Shared" Condition="Exists('..\DotNetSummitMobileApp\DotNetSummitMobileApp.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
