--- a/Droid/DotNetSummitMobileApp.Droid.csproj
+++ b/Droid/DotNetSummitMobileApp.Droid.csproj
@@ -120,6 +120,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CustomRenderers\CustomEntryRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -137,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="bin\" />
+    <Folder Include="CustomRenderers\" />
   </ItemGroup>
   <Import Project="..\DotNetSummitMobileApp\DotNetSummitMobileApp.projitems" Label="Shared" Condition="Exists('..\DotNetSummitMobileApp\DotNetSummitMobileApp.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
